[package]
name = "reconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
minijinja = "2"
minijinja-embed = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "blocking",
] }
rocket = "0.5"
serde = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
minijinja-embed = "2"
